--- a/public/views/includes/header.html
+++ b/public/views/includes/header.html
@@ -22,21 +22,7 @@
 								<li role="presentation"><a href="#!/helpsupport">Help & Support</a></li>	
 								<li role="presentation"  ng-if="$root.user"><a href="#!/sendmoney/{{user.id}}">Send Money</a></li>
 								<li role="presentation" ng-if="!$root.user"><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal">Sign in | Sign Up</a></li>
-                                <li class="dropdown" ng-if="$root.user">
-                                    <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
-                                        <i class="fa fa-user fa-fw"></i> {{user.email.split('@')[0]}} <i class="fa fa-caret-down"></i>
-                                    </a>
-                                    <ul class="dropdown-menu dropdown-user">
-                                        <li><a href="#!/editprofile"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                                        </li>
-                                        <li><a href="#!/changepwd"><i class="fa fa-gear fa-fw"></i> Change Password</a>
-                                        </li>
-                                        <li class="divider"></li>
-                                        <li><a href="javascript:void(0)" data-ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                                        </li>
-                                    </ul>
-                                    <!-- /.dropdown-user -->
-                                </li>	
+                                <li role="presentation"  ng-if="$root.user"><a href="javascript:void(0)" data-ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
 							</ul>
 						</div>
 
@@ -108,6 +94,22 @@
                                                 	</div>  
                                                 	<div class="panel-body">
                                                 		<form  class="form-horizontal" name="signupform" ng-submit="signup(users) && signupform.$valid" novalidate>
+                                                        <div ng-if="processing" us-spinner></div>
+                                                        <alert ng-if="stripeError" class="alert-danger" type="'alert'" close="hideAlerts()">          
+                                                          <div class="alert alert-danger alert-dismissible" role="alert">
+                                                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                            <strong>Error!</strong> 
+                                                            <ul ng-repeat="p in stripeError">
+                                                                <li ng-repeat="(key, value) in p">{{value}}</li>
+                                                            </ul>
+                                                        </div>
+                                                        </alert>
+                                                        <alert ng-if="stripeToken" class="alert-success" close="hideAlerts()">
+                                                          <div class="alert alert-success alert-dismissible" role="alert">
+                                                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                            <strong>Success!</strong> {{stripeToken}}
+                                                        </div>
+                                                        </alert>
                                                 			<div id="div_id_email" class="form-group required">
                                                 				<label for="id_email" class="control-label col-md-4  requiredField"> E-mail<span class="asteriskField">*</span> </label>
                                                 				<div class="controls col-md-8 ">
