--- a/public/views/includes/header.html
+++ b/public/views/includes/header.html
@@ -20,9 +20,9 @@
 								<li role="presentation"><a href="#!/howitworks">How it works</a></li>
 								<li role="presentation"><a href="#!/aboutus">About us</a></li>
 								<li role="presentation"><a href="#!/helpsupport">Help & Support</a></li>	
-								<li role="presentation"  ng-if="$root.user"><a href="#!/sendmoney/{{user.id}}">Send Money</a></li>
-								<li role="presentation" ng-if="!$root.user"><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal">Sign in | Sign Up</a></li>
-                                <li role="presentation"  ng-if="$root.user"><a href="javascript:void(0)" data-ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
+								<li role="presentation"  ng-if="$root.user.status"><a href="#!/sendmoney/{{user.id}}">Send Money</a></li>
+								<li role="presentation" ng-if="!$root.user.status"><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal">Sign in | Sign Up</a></li>
+                                <li role="presentation"  ng-if="$root.user.status"><a href="javascript:void(0)" data-ng-click="logout()"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
 							</ul>
 						</div>
 
@@ -46,6 +46,13 @@
                                                 		<div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
 
                                                 		<form id="loginform" class="form-horizontal" role="form" name="loginform" ng-submit="login(account) && loginform.$valid" novalidate>
+                                                            <div ng-if="processing" us-spinner></div>
+                                                            <alert ng-if="loginError" class="alert-danger" type="'alert'">          
+                                                              <div class="alert alert-danger alert-dismissible" role="alert">
+                                                                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                                                <strong>Error!</strong> {{loginError}}
+                                                            </div>
+                                                            </alert>
 
                                                 			<div style="margin-bottom: 25px" class="input-group">
                                                 				<span class="input-group-addon">
