--- a/public/views/partials/home_sendmoney.html
+++ b/public/views/partials/home_sendmoney.html
@@ -16,6 +16,7 @@
                     <!-- Default panel contents -->
                     <div class="panel-heading"><b>Transactions</b></div>
                     <!-- Table -->
+                    <div class="table-responsive">
                     <table class="table table-striped table-bordered table-list" >
                       <thead>
                             <tr>
@@ -47,6 +48,7 @@
                             </tr>
                           </tbody>
                     </table>
+                    </div>
                     <div class="panel-footer">
                       <div class="row" ng-hide="transactions.length == 0">
                         <div class="col col-xs-4">
@@ -190,19 +192,19 @@
                                 </alert>
                                 <div class="row">
                                   <div class="col-md-6">
-                                     <div class='form-row'>
-                                          <div class='col-xs-12 form-group required'>
+                                     <div class="row">
+                                          <div class='col-xs-12 form-group '>
                                             <label class='control-label'>Card Name</label>
                                             <input class='form-control' size='4' type='text' id="name"  name="cardname" required>
                                           </div>
                                       </div>
-                                      <div class='form-row'>
+                                      <div class="row">
                                           <div class='col-xs-12 form-group card required'>
                                             <label class='control-label'>Card Number</label>
                                             <input autocomplete='off'  size='20' type='text' id="cardn"   name="cardnumber" ng-model="number" payments-validate="card" payments-format="card" payments-type-model="type" class="form-control" />
                                           </div>
                                       </div>
-                                      <div class='form-row'>
+                                      <div class="row">
                                           <div class='col-xs-6 form-group cvc required'>
                                             <label class='control-label'>CVC</label>
                                             <input autocomplete='off' class='form-control card-cvc' placeholder='ex. 311' size='4' type='text' id="cvc" ng-model="cvc" payments-validate="cvc" payments-format="cvc" payments-type-model="type">
@@ -214,7 +216,7 @@
                                       </div>   
                                   </div>
                                   <div class="col-md-6">
-                                    <div class='form-row'>
+                                    <div class="row">
                                       <div class='col-xs-6 form-group cvc required'>
                                         <label  class="control-label">Receiver Prefix</label>
                                         <select class="form-control" ng-model="countrycode" data-ng-change="ConvertCurr()">
@@ -226,7 +228,7 @@
                                         <input type="text" class="form-control"  placeholder="Phone Number" ng-model="phonenumber">
                                       </div>
                                     </div>
-                                    <div class='form-row'>
+                                    <div class="row">
                                         <div class='col-xs-6 form-group'>
                                           <label  class="control-label">Amount to receive</label>
                                           <input type="number" class="form-control"  placeholder="Amount"  data-ng-model="amount" data-ng-change="forExConvert()">
@@ -236,7 +238,7 @@
                                               <input type="text" class="form-control total btn btn-info"  data-ng-model="pay_amount" data-ng-change="forExConvert()"  disabled>
                                         </div>
                                     </div>  
-                                    <div class='form-row'>
+                                    <div class="row">
                                       <div class='col-md-12 form-group'>
                                         <button class='form-control btn btn-primary submit-button' type='submit'>Send »</button>
                                       </div>
