Update transactions table

--- a/public/views/partials/home_sendmoney.html
+++ b/public/views/partials/home_sendmoney.html
@@ -21,11 +21,11 @@
                       <thead>
                             <tr>
                                 <th class="hidden-xs">#</th>
-                                <th>Receiver Number</th>
+                                <th>Receiver</th>
                                 <th>Amount</th>
-                                <th>Transaction Status</th>
-                                <th>Transaction Type</th>
-                                <th>Transaction Date & Time</th>
+                                <th>Status</th>
+                                <th>Type</th>
+                                <th>Date & Time</th>
                             </tr> 
                           </thead>
                           <tbody>
