--- a/public/views/partials/home_admin.html
+++ b/public/views/partials/home_admin.html
@@ -1,61 +1,56 @@
 <section id="blog" class="container">
-        <div class="blog" ng-controller="sendMoneyHomeController">
+        <div class="blog" ng-controller="adminHomeController">
             <div class="row">
                 <div class="col-md-2">
                    <div class="blog-item">
                     <div class="entry-meta">
-                        <span id="publish_date">Home</span>
-                        <span><a href="javascript:void(0)" ng-class="{'adisabled': !usable}" ng-click="showMenu(1)">Transactions</a></span>
-                        <span><a href="javascript:void(0)" ng-class="{'adisabled': !usable}" ng-click="showMenu(2)">Send Money</a></span>
-                        <span><a href="javascript:void(0)" ng-class="{'adisabled': !usable}" ng-click="showMenu(3)">Phone Book</a></span>
+                        <span id="publish_date"><i class="fa fa-user fa-fw"></i> <b>{{user.email.split('@')[0]}} | Menu</b></span>
+                        <span><a href="javascript:void(0)"  ng-click="showMenu(1)">Activate customers</a></span>
+                        <span><a href="javascript:void(0)"  ng-click="showMenu(2)">Countries</a></span>
+                        <span><a href="javascript:void(0)"  ng-click="showMenu(3)">Currencies</a></span>
+                        <span><a href="javascript:void(0)"  ng-click="showMenu(4)">Reports</a></span>
+                        <span><a href="#!/changepwd"><i class="fa fa-gear fa-fw"></i>Change Password</a></span>
                     </div>
                     </div>
                 </div>
-                <div class="col-md-8">
-                  <!-- Alert for pending customers-->
-                    <div class="alert alert-warning alert-dismissible" role="alert" ng-show="PendingCustomer" >
-                      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                      <strong>Warning!</strong> 
-                      We have received your personal details and Identification Document. <br />
-                      Our agents are verifying the details you provided. <br />
-                      You will receive an email once this has been done. <br />
-                      <b> <a  href="#!/editprofile">You can also click here to update the details you provided</a> </b>
-                    </div>
-                    <!-- End Alert for pending customers--> 
-
+                <div class="col-md-10">
                   <div class="panel panel-default" ng-show="TransactionsTable">
                     <!-- Default panel contents -->
-                    <div class="panel-heading"><b>Transactions</b></div>
+                    <div class="panel-heading"><b>Activate Customers</b></div>
                     <!-- Table -->
                     <div class="table-responsive">
                     <table class="table table-striped table-bordered table-list" >
                       <thead>
                             <tr>
                                 <th class="hidden-xs">#</th>
-                                <th>Receiver</th>
-                                <th>Amount</th>
-                                <th>Status</th>
-                                <th>Type</th>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>Phone</th>
+                                <th>Nid</th>
+                                <th>Sex</th>
+                                <th>DOB</th>
+                                <th>Nationality</th>
+                                <th>Photo</th>
                                 <th>Date & Time</th>
+                                <th>Action</th>
                             </tr> 
                           </thead>
                           <tbody>
-                            <tr ng-repeat="transaction in transactions">
+                            <tr ng-repeat="pendingcustomer in pendingcustomers">
                               <td class="hidden-xs">{{$index + 1}}</td>
-                              <td>{{transaction.receiver_number}}</td>
+                              <td>{{pendingcustomer.first_name}}</td>
+                              <td>{{pendingcustomer.last_name}}</td>
+                              <td>{{pendingcustomer.phone}}</td>
+                              <td>{{pendingcustomer.nid}}</td>
+                              <td>{{pendingcustomer.sex}}</td>
+                              <td>{{pendingcustomer.dob}}</td>
+                              <td>{{pendingcustomer.nationality}}</td>
+                              <td><img class="img-responsive img-blog" ng-src="storage/{{pendingcustomer.photos.name}}" width="100%" alt="" /></td>
+                              <td>{{getTimezone(pendingcustomer.updated_at) | date:'yyyy-MM-dd HH:mm:ss'}}</td>
                               <td>
-                                <div ng-if="transaction.transaction_type == 'c2m' ">{{transaction.amount/100}}</div>
-                                <div ng-if="transaction.transaction_type == 'm2m' ">{{transaction.amount}}</div>
+                                 <a href="#!/sendmoney/{{user.id}}" class="btn btn-success">Active</a> 
+                                 <a href="#!/sendmoney/{{user.id}}" class="btn btn-danger">Discard</a>
                               </td>
-                              <td>
-                                <div ng-if="transaction.status == 1 ">Successful</div>
-                                <div ng-if="transaction.status == 0 ">Failed</div>
-                              </td>
-                              <td>
-                                <div ng-if="transaction.transaction_type == 'c2m' ">Card to Mobile</div>
-                                <div ng-if="transaction.transaction_type == 'm2m' ">Mobile to Mobile</div>
-                              </td>
-                              <td>{{getTimezone(transaction.updated_at) | date:'yyyy-MM-dd HH:mm:ss'}}</td>
                             </tr>
                           </tbody>
                     </table>
@@ -71,7 +66,7 @@
                               <a href="javascript:void(0)" ng-click="prevPage()">&lsaquo; Prev </a>
                             </li> 
                             <li ng-repeat="i in range" ng-class="{active : currentPage == i}">
-                              <a href="javascript:void(0)" ng-click="getTnx(i)">{{i}}</a>
+                              <a href="javascript:void(0)" ng-click="getPendingCustomers(i)">{{i}}</a>
                             </li>
                             <li>
                               <a href="javascript:void(0)" ng-click="nextPage()">Next &rsaquo;</a>
@@ -157,6 +152,7 @@
                         
                            
                              <input type="file" file-model="record.image_file"/>
+                             <button ng-click="uploadFile()">upload me</button>
                           </div><!-- /input-group --> 
                           </div>
                             
@@ -384,16 +380,9 @@
                     </div>
                   </div>
                   
-
-                  <aside class="col-md-2">
-                    <div class="blog-item">
-                      <div class="entry-meta">
-                        <span id="publish_date"><i class="fa fa-user fa-fw"></i> <b>{{user.email.split('@')[0]}} | Settings</b></span>
-                        <span><a href="#!/editprofile"><i class="fa fa-user fa-fw"></i>User Profile</a></span>
-                        <span><a href="#!/changepwd"><i class="fa fa-gear fa-fw"></i>Change Password</a></span>
-                      </div>
-                    </div>
-    			       </aside>  
+                  <!--/. Start Aside-->
+                  <!--/.End Aside-->
+                  
             </div><!--/.row-->
 
             
