--- a/public/views/partials/home_admin.html
+++ b/public/views/partials/home_admin.html
@@ -27,7 +27,7 @@
     </div>
     <!-- Start Transaction Table -->
     <div class="row">
-       <div class="panel panel-default" ng-show="TransactionsTable">
+       <div class="panel panel-default" ng-show="CustomersTable">
         <!-- Default panel contents -->
         <div class="panel-heading"><b>Activate Customers</b></div>
         <!-- Table -->
@@ -99,5 +99,143 @@
     </div>
     </div>
      <!-- End Transaction Table -->
+       <!-- Start Countries Table -->
+    <div class="row">
+       <div class="panel panel-default" ng-show="CountriesTable">
+        <!-- Default panel contents -->
+        <div class="panel-heading">
+        <div class="row">
+          <div class="col col-xs-6">
+            <b>Countries</b>
+          </div>
+          <div class="col col-xs-6 text-right">
+            <button type="button" class="btn btn-sm btn-primary btn-create">Create New</button>
+          </div>
+        </div>
+        
+        </div>
+        <!-- Table -->
+        <div class="table-responsive">
+          <table class="table table-striped table-bordered table-list table-condensed" >
+            <thead>
+              <tr>
+                <th class="hidden-xs">#</th>
+                <th>iso_abbr</th>
+                <th>name</th>
+                <th>nicename</th>
+                <th>iso_name</th>
+                <th>numcode</th>
+                <th>phonecode</th>
+                <th>Action</th>
+              </tr> 
+            </thead>
+            <tbody>
+              <tr ng-repeat="country in countries">
+                <td class="hidden-xs">{{$index + 1}}</td>
+                <td>{{country.iso_abbr}}</td>
+                <td>{{country.name}}</td>
+                <td>{{country.nicename}}</td>
+                <td>{{country.iso_name}}</td>
+                <td>{{country.numcode}}</td>
+                <td>{{country.phonecode}}</td>
+                <td align="center">
+                 <a href="" class="btn btn-default" ng-click="activate_discard_customer(pendingcustomer.id,1)">    
+                  <i class="fa fa-pencil" aria-hidden="true"></i>
+                </a>  
+                <a href="" class="btn btn-default" ng-click="activate_discard_customer(pendingcustomer.id,0)">
+                  <i class="fa fa-trash" aria-hidden="true"></i>
+                </a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="panel-footer">
+        <div class="row" ng-hide="countries.length == 0">
+          <div class="col col-xs-4">
+            Page {{gtcurrentPage}} of {{gttotalPages}}
+          </div>
+          <div class="col col-xs-8">
+            <ul class="pagination pagination-lg">
+              <li>
+                <a href="javascript:void(0)" ng-click="gtprevPage()">&lsaquo; Prev </a>
+              </li>
+              <li>
+                <a href="javascript:void(0)" ng-click="gtnextPage()">Next &rsaquo;</a>
+              </li>
+            </ul><!--/.pagination-->
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+     <!-- End Countries Table -->
+     <!-- Start Currencies Table -->
+    <div class="row">
+       <div class="panel panel-default" ng-show="CurrenciesTable">
+        <!-- Default panel contents -->
+        <div class="panel-heading">
+        <div class="row">
+          <div class="col col-xs-6">
+            <b>Currencies</b>
+          </div>
+          <div class="col col-xs-6 text-right">
+            <button type="button" class="btn btn-sm btn-primary btn-create">Create New</button>
+          </div>
+        </div>
+        
+        </div>
+        <!-- Table -->
+        <div class="table-responsive">
+          <table class="table table-striped table-bordered table-list table-condensed" >
+            <thead>
+              <tr>
+                <th class="hidden-xs">#</th>
+                <th>country</th>
+                <th>symbol</th>
+                <th>exchange_rate</th>
+                <th>phonecode</th>
+                <th>Action</th>
+              </tr> 
+            </thead>
+            <tbody>
+              <tr ng-repeat="currency in currencies">
+                <td class="hidden-xs">{{$index + 1}}</td>
+                <td>{{currency.country}}</td>
+                <td>{{currency.symbol}}</td>
+                <td>{{currency.exchange_rate}}</td>
+                <td>{{currency.phonecode}}</td>
+                <td align="center">
+                 <a href="" class="btn btn-default" ng-click="activate_discard_customer(pendingcustomer.id,1)">    
+                  <i class="fa fa-pencil" aria-hidden="true"></i>
+                </a>  
+                <a href="" class="btn btn-default" ng-click="activate_discard_customer(pendingcustomer.id,0)">
+                  <i class="fa fa-trash" aria-hidden="true"></i>
+                </a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="panel-footer">
+        <div class="row" ng-hide="currencies.length == 0">
+          <div class="col col-xs-4">
+            Page {{gccurrentPage}} of {{gctotalPages}}
+          </div>
+          <div class="col col-xs-8">
+            <ul class="pagination pagination-lg">
+              <li>
+                <a href="javascript:void(0)" ng-click="gcprevPage()">&lsaquo; Prev </a>
+              </li>
+              <li>
+                <a href="javascript:void(0)" ng-click="gcnextPage()">Next &rsaquo;</a>
+              </li>
+            </ul><!--/.pagination-->
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+     <!-- End Countries Table -->
   </div>
 </section>
