--- a/public/views/partials/home_sendmoney.html
+++ b/public/views/partials/home_sendmoney.html
@@ -102,10 +102,8 @@
                             <div class="controls col-md-8 ">
                                <div class="input-group">
                                 <div class="input-group-btn" style="width:200px">
-                                  <select id="countrycode" name="countrycode" class="form-control" ng-model="record.prefix_code">
-                                    <option value="250">Rwanda (+250)</option>
-                                    <option value="256">Uganda (+256)</option>
-                                    <option value="254">Kenya (+254)</option>
+                                  <select class="form-control" ng-model="record.prefix_code">
+                                    <option value="{{country.phonecode}}" ng-repeat="country in countries">{{country.nicename}} (+ {{country.phonecode}})</option>
                                   </select>
                                 </div><!-- /btn-group -->
                                 <input type="text" class="form-control" ng-model="record.phonenumber" >
